--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+12-81-0 = ["misskey-api/12-81-0", "12-80-0"]
 12-80-0 = ["misskey-api/12-80-0", "12-79-2"]
 12-79-2 = ["misskey-api/12-79-2", "12-79-0"]
 12-79-0 = ["misskey-api/12-79-0", "12-77-1"]
