--- a/misskey/Cargo.toml
+++ b/misskey/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings", "web-programming::http-client", "web-programming::
 [features]
 default = ["http-client", "websocket-client", "tokio-runtime", "aid"]
 
+12-82-0 = ["misskey-api/12-82-0", "misskey-util/12-82-0"]
 12-81-0 = ["misskey-api/12-81-0", "misskey-util/12-81-0"]
 12-80-0 = ["misskey-api/12-80-0", "misskey-util/12-80-0"]
 12-79-2 = ["misskey-api/12-79-2", "misskey-util/12-79-2"]
