Add: Partially support v12.88.0
endpoint `notes/translate` and `reset-db` are not supported

--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:12.88.0'
+            flags: --features 12-88-0
           - image: 'misskey/misskey:12.82.0'
             flags: --features 12-82-0
           - image: 'misskey/misskey:12.81.0'
