--- a/misskey/Cargo.toml
+++ b/misskey/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings", "web-programming::http-client", "web-programming::
 [features]
 default = ["http-client", "websocket-client", "tokio-runtime", "aid"]
 
+12-91-0 = ["misskey-api/12-91-0", "misskey-util/12-91-0"]
 12-89-1 = ["misskey-api/12-89-1", "misskey-util/12-89-1"]
 12-89-0 = ["misskey-api/12-89-0", "misskey-util/12-89-0"]
 12-88-0 = ["misskey-api/12-88-0", "misskey-util/12-88-0"]
