--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+12-92-0 = ["misskey-api/12-92-0", "12-91-0"]
 12-91-0 = ["misskey-api/12-91-0", "12-89-1"]
 12-89-1 = ["misskey-api/12-89-1", "12-89-0"]
 12-89-0 = ["misskey-api/12-89-0", "12-88-0"]
