--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+12-96-0 = ["misskey-api/12-96-0", "12-95-0"]
 12-95-0 = ["misskey-api/12-95-0", "12-93-0"]
 12-93-0 = ["misskey-api/12-93-0", "12-92-0"]
 12-92-0 = ["misskey-api/12-92-0", "12-91-0"]
