--- a/misskey/Cargo.toml
+++ b/misskey/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings", "web-programming::http-client", "web-programming::
 [features]
 default = ["http-client", "websocket-client", "tokio-runtime", "aid"]
 
+12-102-0 = ["misskey-api/12-102-0", "misskey-util/12-102-0"]
 12-99-0 = ["misskey-api/12-99-0", "misskey-util/12-99-0"]
 12-98-0 = ["misskey-api/12-98-0", "misskey-util/12-98-0"]
 12-96-0 = ["misskey-api/12-96-0", "misskey-util/12-96-0"]
