--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:12.106.0'
+            flags: --features 12-106-0
           - image: 'misskey/misskey:12.105.0'
             flags: --features 12-105-0
           - image: 'misskey/misskey:12.102.0'
