--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:12.108.1'
+            flags: --features 12-108-0
           - image: 'misskey/misskey:12.107.0'
             flags: --features 12-107-0
           - image: 'misskey/misskey:12.106.0'
