--- a/example/ping-pong/Cargo.toml
+++ b/example/ping-pong/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-misskey = { path = "../../misskey", version = "0.2.0", features = ["websocket-client"] }
+misskey = { path = "../../misskey", version = "0.2.0", features = ["http-client", "websocket-client"] }
 tokio = { version = "1.0", features = ["full"] }
 structopt = "0.3.16"
 url = "2.1.1"
