--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+12-77-0 = ["misskey-api/12-77-0", "12-75-0"]
 12-75-0 = ["misskey-api/12-75-0", "12-71-0"]
 12-71-0 = ["misskey-api/12-71-0", "12-70-0"]
 12-70-0 = ["misskey-api/12-70-0", "12-69-0"]
