--- a/misskey/Cargo.toml
+++ b/misskey/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings", "web-programming::http-client", "web-programming::
 [features]
 default = ["http-client", "websocket-client", "tokio-runtime", "aid"]
 
+12-77-0 = ["misskey-api/12-77-0", "misskey-util/12-77-0"]
 12-75-0 = ["misskey-api/12-75-0", "misskey-util/12-75-0"]
 12-71-0 = ["misskey-api/12-71-0", "misskey-util/12-71-0"]
 12-70-0 = ["misskey-api/12-70-0", "misskey-util/12-70-0"]
