Fix: Fix statement_timeout

--- a/ci/testenv/web/default.yml
+++ b/ci/testenv/web/default.yml
@@ -11,7 +11,7 @@ db:
   user: misskey-test
   pass: misskey-test
   extra:
-    statement_timeout: 60000,
+    statement_timeout: 60000
 
 redis:
   host: redis
