--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+13-0-0 = ["misskey-api/13-0-0", "12-112-3"]
 12-112-3 = ["misskey-api/12-112-3", "12-112-0"]
 12-112-0 = ["misskey-api/12-112-0", "12-111-0"]
 12-111-0 = ["misskey-api/12-111-0", "12-109-0"]
