--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:13.1.0'
+            flags: --features 13-1-0
           - image: 'misskey/misskey:13.0.0'
             flags: --features 13-0-0
           - image: 'misskey/misskey:12.112.3'
