--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:13.2.3'
+            flags: --features 13-2-3
           - image: 'misskey/misskey:13.1.1'
             flags: --features 13-1-1
           - image: 'misskey/misskey:13.1.0'
