--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+13-2-3 = ["misskey-api/13-2-3", "13-1-1"]
 13-1-1 = ["misskey-api/13-1-1", "13-1-0"]
 13-1-0 = ["misskey-api/13-1-0", "13-0-0"]
 13-0-0 = ["misskey-api/13-0-0", "12-112-3"]
