--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+13-4-0 = ["misskey-api/13-4-0", "13-3-2"]
 13-3-2 = ["misskey-api/13-3-2", "13-3-0"]
 13-3-0 = ["misskey-api/13-3-0", "13-2-4"]
 13-2-4 = ["misskey-api/13-2-4", "13-2-3"]
