--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+13-10-3 = ["misskey-api/13-10-3", "13-10-0"]
 13-10-0 = ["misskey-api/13-10-0", "13-9-0"]
 13-9-0 = ["misskey-api/13-9-0", "13-8-0"]
 13-8-0 = ["misskey-api/13-8-0", "13-7-0"]
