--- a/.github/workflows/flaky.yml
+++ b/.github/workflows/flaky.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - image: 'misskey/misskey:13.11.3'
+            flags: --features 13-11-3
           - image: 'misskey/misskey:13.11.2'
             flags: --features 13-11-2
           - image: 'misskey/misskey:13.11.0'
