--- a/misskey/Cargo.toml
+++ b/misskey/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings", "web-programming::http-client", "web-programming::
 [features]
 default = ["http-client", "websocket-client", "tokio-runtime", "aid"]
 
+13-11-3 = ["misskey-api/13-11-3", "misskey-util/13-11-3", "13-11-2"]
 13-11-2 = ["misskey-api/13-11-2", "misskey-util/13-11-2", "13-11-0"]
 13-11-0 = ["misskey-api/13-11-0", "misskey-util/13-11-0", "13-10-3"]
 13-10-3 = ["misskey-api/13-10-3", "misskey-util/13-10-3", "13-10-0"]
