--- a/misskey-util/Cargo.toml
+++ b/misskey-util/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["async", "client", "misskey"]
 [features]
 default = ["aid"]
 
+13-13-0 = ["misskey-api/13-13-0", "13-12-2"]
 13-12-2 = ["misskey-api/13-12-2", "13-12-0"]
 13-12-0 = ["misskey-api/13-12-0", "13-11-3"]
 13-11-3 = ["misskey-api/13-11-3", "13-11-2"]
